# Capjs-Solver-Cpp

./: CMakeLists.txt  README.md
examples/c_api/: c_api_example.c
examples/cpp_api/: cpp_api_example.cpp
examples/csharp_api/: WebIntegrationExample.csproj  async_csharp_example.cs  csharp_api_example.cs  web_integration_example.cs
examples/python_api/: cap_cli.py  python_api_example.py
include/: cap_c_api.h  challenge_solver.h  pow_solver.h  prng.h  sha256.h
src/api/: cap_c_api.cpp
src/apps/: main.cpp
src/core/: challenge_solver.cpp  pow_solver.cpp  prng.cpp  sha256.cpp
tests/: local.cpp  standalone.cpp
